Fixed and added Service Tests