@@ -1,11 +1,13 @@
 package com.example.Clique.Service;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 import java.time.LocalDateTime;
+import java.util.Arrays;
 import java.util.List;
 
 import org.junit.jupiter.api.BeforeEach;
@@ -46,60 +48,65 @@ public class SearchServiceTest {
         MockitoAnnotations.openMocks(this);
     }
 
-    /* 
     @Test
-    void testSearchUsers() {
-        String query = "john";
-
+    void testSearchUsers_Success() {
+        // Arrange
         Users user1 = new Users();
         user1.setUserId(1L);
-        user1.setUsername("john_doe");
+        user1.setUsername("user1");
 
         Users user2 = new Users();
         user2.setUserId(2L);
-        user2.setUsername("john_smith");
+        user2.setUsername("user2");
 
-        when(usersRepository.searchByUsername(query)).thenReturn(List.of(user1, user2));
+        when(usersRepository.findAll()).thenReturn(Arrays.asList(user1, user2));
 
-        List<UserSearchDTO> result = searchService.searchUsers(query);
+        // Act
+        List<UserSearchDTO> result = searchService.searchUsers();
 
+        // Assert
+        assertNotNull(result);
         assertEquals(2, result.size());
-        assertEquals("john_doe", result.get(0).getUsername());
-        assertEquals("john_smith", result.get(1).getUsername());
-        verify(usersRepository, times(1)).searchByUsername(query);
+        assertEquals("user1", result.get(0).getUsername());
+        assertEquals("user2", result.get(1).getUsername());
+        verify(usersRepository, times(1)).findAll();
     }
 
     @Test
-    void testSearchPosts() {
-        String query = "test";
+    void testSearchPosts_Success() {
+        // Arrange
+        Posts post1 = new Posts(1L, "Post 1", 1L, LocalDateTime.now());
+        Posts post2 = new Posts(2L, "Post 2", 2L, LocalDateTime.now());
 
-        Posts post1 = new Posts();
-        post1.setPostId(1L);
-        post1.setPostText("This is a test post");
-        post1.setPostedTime(LocalDateTime.now());
-        post1.setPosterId(1L);
+        Users user1 = new Users();
+        user1.setUserId(1L);
+        user1.setUsername("user1");
 
-        Posts post2 = new Posts();
-        post2.setPostId(2L);
-        post2.setPostText("Another test post");
-        post2.setPostedTime(LocalDateTime.now());
-        post2.setPosterId(2L);
+        Users user2 = new Users();
+        user2.setUserId(2L);
+        user2.setUsername("user2");
 
-        when(postRepository.searchByContent(query)).thenReturn(List.of(post1, post2));
-        when(usersRepository.getUsernameByUserId(1L)).thenReturn("user1");
-        when(usersRepository.getUsernameByUserId(2L)).thenReturn("user2");
+        when(postRepository.searchByContent("Post")).thenReturn(Arrays.asList(post1, post2));
+        when(usersRepository.findByUserId(1L)).thenReturn(user1);
+        when(usersRepository.findByUserId(2L)).thenReturn(user2);
         when(reactionRepository.countByPostId(1L)).thenReturn(5L);
         when(reactionRepository.countByPostId(2L)).thenReturn(3L);
 
-        List<PostSearchDTO> result = searchService.searchPosts(query);
+        // Act
+        List<PostSearchDTO> result = searchService.searchPosts("Post");
 
+        // Assert
+        assertNotNull(result);
         assertEquals(2, result.size());
-        assertEquals("This is a test post", result.get(0).getPostText());
-        assertEquals("Another test post", result.get(1).getPostText());
+        assertEquals("Post 1", result.get(0).getPostText());
+        assertEquals("user1", result.get(0).getUsername());
         assertEquals(5L, result.get(0).getLikes());
-        assertEquals(3L, result.get(1).getLikes());
-        verify(postRepository, times(1)).searchByContent(query);
-        verify(usersRepository, times(1)).getUsernameByUserId(1L);
-        verify(usersRepository, times(1)).getUsernameByUserId(2L);
-    }*/
+        verify(postRepository, times(1)).searchByContent("Post");
+        verify(usersRepository, times(1)).findByUserId(1L);
+        verify(usersRepository, times(1)).findByUserId(2L);
+        verify(reactionRepository, times(2)).countByPostId(1L);
+        verify(reactionRepository, times(2)).countByPostId(2L);
+    }
+
+    
 }
